Couple bugs needed the squish.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,12 @@ $color-button-hover: #06a2d4;
 
 @media (prefers-color-scheme: dark) {
 
+  /*  .p-card {
+    &:hover {
+      @apply bg-gray-400/50;
+    }
+  }
+*/
   .text-gray-700 {
     @apply text-gray-200;
   }
@@ -45,22 +51,45 @@ $color-button-hover: #06a2d4;
   }
 }
 
-.p-card {
-  .p-card-header {
-    @apply rounded-t-lg;
-    background-color: $color-primary;
-    color: white;
-    @apply transition ease-in-out;
-  }
+@media (prefers-color-scheme: dark) {
+  .p-card {
+    .p-card-header {
+      @apply rounded-t-lg;
+      background-color: $color-primary;
+      color: white;
+      @apply transition ease-in-out;
+    }
 
-  &:hover .p-card-header {
-    background-color: $color-hover;
-    color: $color-secondary;
-    @apply transition ease-in-out;
-  }
+    &:hover .p-card-header {
+      background-color: $color-hover;
+      color: $color-secondary;
+      @apply transition ease-in-out;
+    }
 
-  &:hover {
-    @apply transition ease-in-out bg-gray-50;
+    &:hover {
+      @apply transition ease-in-out bg-gray-700;
+    }
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  .p-card {
+    .p-card-header {
+      @apply rounded-t-lg;
+      background-color: $color-primary;
+      color: white;
+      @apply transition ease-in-out;
+    }
+
+    &:hover .p-card-header {
+      background-color: $color-hover;
+      color: $color-secondary;
+      @apply transition ease-in-out;
+    }
+
+    &:hover {
+      @apply transition ease-in-out bg-gray-50;
+    }
   }
 }
 
